--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>点我调用扫一扫</div>
 </body>
-<script src='http://res.wx.qq.com/open/js/jweixin-1.0.0.js'></script>
+<script src='https://res.wx.qq.com/open/js/jweixin-1.0.0.js'></script>
 <script>
     var div=document.querySelector('div');
     div.onclick=function(){
